Hardware/ip_repo/vivado_hls.log
INFO: [HLS 200-10] Running '/tools/Xilinx/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'benjamin' on host 'Laptop' (Linux_x86_64 version 5.3.0-46-generic) on Thu Apr 23 10:52:07 CEST 2020
INFO: [HLS 200-10] On os Ubuntu 18.04.4 LTS
INFO: [HLS 200-10] In directory '/home/benjamin/Repositories/PynqNet/Hardware/ip_repo'
Sourcing Tcl script '/home/benjamin/Repositories/PynqNet/Hardware/ip_repo/FilterBS300/solution1/csynth.tcl'
INFO: [HLS 200-10] Opening project '/home/benjamin/Repositories/PynqNet/Hardware/ip_repo/FilterBS300'.
INFO: [HLS 200-10] Adding design file 'FilterBS300/src/TopLevel.cpp' to the project
INFO: [HLS 200-10] Opening solution '/home/benjamin/Repositories/PynqNet/Hardware/ip_repo/FilterBS300/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'FilterBS300/src/TopLevel.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from FilterBS300/src/TopLevel.cpp:1:
In file included from FilterBS300/src/TopLevel.cpp:3:
FilterBS300/src/TopLevelFunctions.h:20:35: error: no member named 'stof' in namespace 'std'
            coeffs.push_back(std::stof(line));
                             ~~~~~^
FilterBS300/src/TopLevelFunctions.h:28:14: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for (auto &it : coeffs) {
             ^
FilterBS300/src/TopLevelFunctions.h:28:23: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for (auto &it : coeffs) {
                      ^
2 warnings and 1 error generated.
Failed during preprocessing.
    while executing
"source /home/benjamin/Repositories/PynqNet/Hardware/ip_repo/FilterBS300/solution1/csynth.tcl"
    invoked from within
"hls::main /home/benjamin/Repositories/PynqNet/Hardware/ip_repo/FilterBS300/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
